--- a/src/components/SkillsSection/SkillsSection.scss
+++ b/src/components/SkillsSection/SkillsSection.scss
@@ -2,12 +2,15 @@
 @import '../../styles/animations';
 
 .skills-section {
+  position: relative;
+  
   h2#skills-title {
     position: relative;
     display: inline-block;
     font-size: $text-3xl;
     font-weight: bold;
     margin-bottom: $spacing-10;
+    z-index: 5;
 
     &::after {
       content: '';
@@ -25,53 +28,16 @@
   .skills-doodle-wrapper {
     position: relative;
     padding: $spacing-4;
-    overflow: hidden;
-  }
-  
-  .doodle-circles {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    
-    .doodle-circle {
-      position: absolute;
-      border: 3px dashed black;
-      border-radius: 50%;
-      opacity: 0.15;
-      
-      &:nth-child(1) {
-        width: 200px;
-        height: 200px;
-        top: 10%;
-        left: -100px;
-        animation: spin 30s linear infinite;
-      }
-      
-      &:nth-child(2) {
-        width: 300px;
-        height: 300px;
-        top: 60%;
-        right: -150px;
-        animation: spin 40s linear infinite reverse;
-      }
-      
-      &:nth-child(3) {
-        width: 150px;
-        height: 150px;
-        bottom: 5%;
-        left: 30%;
-        animation: spin 20s linear infinite;
-      }
-    }
+    overflow: visible;
+    z-index: 1;
   }
   
   .skill-categories {
     display: grid;
     grid-template-columns: 1fr;
     gap: $spacing-8;
+    position: relative;
+    z-index: 5;
     
     @media (min-width: $breakpoint-lg) {
       grid-template-columns: repeat(3, 1fr);
@@ -83,32 +49,66 @@
       .skill-category-border {
         height: 100%;
         transform: rotate(0deg);
+        position: relative;
+        transition: all 0.3s ease;
         
         @media (min-width: $breakpoint-lg) {
           &:hover {
-            transform: translateY(-5px) rotate(-1deg);
-            transition: transform 0.3s ease;
+            transform: translateY(-8px) rotate(-1deg);
+          }
+        }
+        
+        // Different background colors for categories
+        &.category-1 {
+          background-color: white;
+        }
+        
+        &.category-2 {
+          background-color: white;
+        }
+        
+        &.category-3 {
+          background-color: white;
+        }
+        
+        .category-icon-wrapper {
+          position: absolute;
+          top: -25px;
+          left: 50%;
+          transform: translateX(-50%);
+          
+          .category-icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: white;
+            border: 3px solid black;
+            z-index: 10;
+            box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.2);
           }
         }
       }
       
       .category-title {
         text-align: center;
-        margin-bottom: $spacing-6;
+        margin-bottom: $spacing-4;
+        margin-top: $spacing-2;
         font-size: $text-xl;
         font-weight: 700;
         position: relative;
         display: inline-block;
-        
-        &:after {
-          content: '';
-          position: absolute;
-          left: 0;
-          bottom: -8px;
-          width: 100%;
-          height: 3px;
-          background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 5v1H0V0h5z'/%3E%3C/g%3E%3C/svg%3E");
-        }
+        padding-bottom: $spacing-2;
+      }
+      
+      .skill-category-divider {
+        margin-bottom: $spacing-4;
+        margin-top: -$spacing-2;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
       }
       
       .skills-list {
@@ -124,7 +124,7 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: -1;
+    z-index: 2;
     
     .floating-icon {
       position: absolute;
@@ -140,12 +140,12 @@
       
       &.icon-1 {
         top: 15%;
-        left: 10%;
+        left: 5%;
         animation: float 8s ease-in-out infinite, spin 20s linear infinite;
       }
       
       &.icon-2 {
-        top: 65%;
+        top: 50%;
         right: 8%;
         animation: float 10s ease-in-out infinite reverse, spin 25s linear infinite reverse;
       }
@@ -161,15 +161,110 @@
         right: 15%;
         animation: float 9s ease-in-out infinite 0.5s, spin 22s linear infinite reverse;
       }
+      
+      &.icon-5 {
+        bottom: 25%;
+        right: 5%;
+        animation: float 8.5s ease-in-out infinite 1.2s, spin 28s linear infinite;
+      }
+      
+      &.icon-6 {
+        top: 60%;
+        left: 8%;
+        animation: float 7.5s ease-in-out infinite 0.8s, spin 26s linear infinite reverse;
+      }
+      
+      &.icon-7 {
+        top: 45%;
+        left: 40%;
+        animation: float 8.5s ease-in-out infinite 1.3s, spin 24s linear infinite;
+      }
+      
+      &.icon-8 {
+        bottom: 35%;
+        right: 40%;
+        animation: float 9s ease-in-out infinite 0.5s, spin 28s linear infinite reverse;
+      }
+    }
+  }
+  
+  .skill-connecting-lines {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    pointer-events: none;
+    
+    .connecting-line {
+      position: absolute;
+      opacity: 0.2;
+      
+      &.line-1 {
+        top: 20%;
+        left: calc(50% - 75px);
+        animation: float 15s ease-in-out infinite;
+      }
+      
+      &.line-2 {
+        bottom: 25%;
+        left: calc(50% - 75px);
+        animation: float 18s ease-in-out infinite reverse;
+      }
+    }
+  }
+  
+  .skills-background-elements {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    
+    .notebook-line {
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background-color: rgba(0, 0, 0, 0.1);
+      
+      &:nth-child(1) {
+        top: 20%;
+      }
+      
+      &:nth-child(2) {
+        top: 40%;
+      }
+      
+      &:nth-child(3) {
+        top: 60%;
+      }
+      
+      &:nth-child(4) {
+        top: 80%;
+      }
     }
   }
 }
 
+// Additional animations
 @keyframes float {
   0%, 100% {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-20px);
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
   }
 }
