--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 // Utility classes
