--- a/src/components/DoodleLandingSection/DoodleLandingSection.scss
+++ b/src/components/DoodleLandingSection/DoodleLandingSection.scss
@@ -191,9 +191,11 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 100vw; /* Use viewport width instead of 100% */
       height: 100%;
       pointer-events: none;
+      left: 50%;
+      transform: translateX(-50%); /* Center the container */
       
       .floating-icon {
         position: absolute;
@@ -210,84 +212,83 @@
         transition: opacity 0.8s ease;
         z-index: 10;
         
-        // Using absolute pixel positioning rather than calc
-        // This directly positions icons at specific spots on screen
+        /* More widely distributed icon positioning - keeping clear of text */
         
         &.icon-1 { // Code - Yellow
-          left: 20%;
-          top: 25%;
+          left: 5%;
+          top: 20%;
           background-color: #fde047;
           animation: float 8s ease-in-out infinite;
           transition-delay: 0.3s;
           
           @media (max-width: $breakpoint-md) {
-            left: 10%;
-            top: 25%;
+            left: 5%;
+            top: 15%;
           }
         }
         
         &.icon-2 { // Palette - Pink
-          right: 20%;
+          right: 5%;
           top: 20%;
           background-color: #f9a8d4;
           animation: float 9s ease-in-out infinite 0.2s;
           transition-delay: 0.5s;
           
           @media (max-width: $breakpoint-md) {
-            right: 10%;
-            top: 20%;
+            right: 5%;
+            top: 15%;
           }
         }
         
         &.icon-3 { // Lightbulb - Green
-          left: 40%;
+          left: 5%;
           bottom: 20%;
           background-color: #86efac;
           animation: float 7s ease-in-out infinite 0.4s;
           transition-delay: 0.7s;
           
           @media (max-width: $breakpoint-md) {
-            left: 30%;
-            bottom: 25%;
+            left: 5%;
+            bottom: 20%;
           }
         }
         
         &.icon-4 { // BookOpen - Blue
-          right: 40%;
-          bottom: 25%;
+          right: 5%;
+          bottom: 20%;
           background-color: #93c5fd;
           animation: float 10s ease-in-out infinite 0.6s;
           transition-delay: 0.9s;
           
           @media (max-width: $breakpoint-md) {
-            right: 30%;
-            bottom: 30%;
+            right: 5%;
+            bottom: 20%;
           }
         }
         
         &.icon-5 { // Sparkles - Yellow
-          left: 30%;
-          top: 45%;
+          left: 15%;
+          top: 50%;
           background-color: #fef9c3;
           animation: pulse 5s ease-in-out infinite;
           transition-delay: 1.1s;
           
           @media (max-width: $breakpoint-md) {
-            left: 20%;
+            left: 8%;
             top: 50%;
           }
         }
         
         &.icon-6 { // Terminal - Blue
-          right: 30%;
+          right: 15%;
           top: 50%;
           background-color: #dbeafe;
           animation: float 7.5s ease-in-out infinite 0.8s;
           transition-delay: 1.3s;
           
           @media (max-width: $breakpoint-md) {
-            right: 15%;
-            top: 55%;
+            right: 8%;
+            top: 50%;
           }
         }
       }
