--- a/src/pages/StudentPortfolio/StudentPortfolio.scss
+++ b/src/pages/StudentPortfolio/StudentPortfolio.scss
@@ -151,7 +151,7 @@
       @media (max-width: $breakpoint-md - 1px) {
         display: flex;
         align-items: center;
-        justify-content: center;
+        //justify-content: center;
         width: 45px;
         height: 45px;
         background-color: $white;
